<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <ImageView
            android:id="@+id/iv_Photo"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:onClick="onClickSelectPhoto"
            android:layout_gravity="center"
            android:src="@drawable/ic_logo" />

        <EditText
            android:inputType="text"
            android:maxLines="1"
            android:id="@+id/edt_firstname"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:hint="@string/f_name" />

        <EditText
            android:inputType="text"
            android:maxLines="1"
            android:id="@+id/edt_lastname"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:hint="@string/l_name" />

        <EditText
            android:inputType="text"
            android:maxLines="1"
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:hint="@string/email_id" />

        <EditText
            android:id="@+id/edt_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:hint="@string/password" />

        <EditText
            android:id="@+id/edt_conformpassword"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:hint="@string/c_password" />

        <RadioGroup
            android:id="@+id/rdbt_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="Male" />

            <RadioButton
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginEnd="100dp"
                android:text="Female" />

        </RadioGroup>

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@color/colorAccent"
            android:text="Sign up"
            android:textColor="@color/colortext" />

        <TextView
            android:id="@+id/txt_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/a_account"
            android:textSize="20dp" />

    </LinearLayout>

</ScrollView>