<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="Account Login"
        android:textColor="@color/colortext"
        android:textSize="25dp" />

    <ImageView
        android:layout_width="180dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_logo" />

    <EditText
        android:inputType="text"
        android:maxLines="1"
        android:id="@+id/edt_email"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:hint="@string/email_id" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@color/colortext"
        android:text="Login"
        android:textColor="@color/colorAccent" />

    <TextView
        android:id="@+id/txt_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="Forget Password"
        android:textColor="@color/colortext1"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txt_create"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/create_account"
        android:textColor="@color/colortext1"
        android:textSize="20sp" />

</LinearLayout>